--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
+    "start": "node index.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
